fix: fix flight items overflowing the grid item

--- a/web/styles.less
+++ b/web/styles.less
@@ -320,6 +320,8 @@ a {
       .grid-item-body {
         height: calc(100% - 50px);
         color: white;
+        overflow-y: hidden;
+        border-radius: 0px 0px 10px 10px;
       }
     }
   }
